# rust-intro

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  push-gh.sh  rust-intro.sublime-project
css/: custom.css
presentation/: index.html
presentation/css/: custom.css
presentation/img/: stolen-chair.webm
src/: concurrent.rs  main.rs  memory.rs  safety.rs  testing.rs  traits.rs  types.rs
src-csharp/: Main.sln
src-csharp/Main/: Main.csproj  Program.cs
src-csharp/Main/Properties/: AssemblyInfo.cs
